3-kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-there
spec:
  rules:
  - host: devops.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-there
            port:
              number: 80
  ingressClassName: nginx
